# ProcessEnergyAccounting

./: .gitattributes  .gitignore  README.md  cvxpy_estimator.py  delta_aggregator.py  example.env  explore_dataset.ipynb  pyproject.toml  requirements.txt
database/: __init__.py  client.py
daw-nextflow/: nfcore_test_pipelines.txt  trace.config
load_generation/: simple_load_generator.py
model_testing/: rf_with plots.py
monitor/: .gitignore  Dockerfile  README.md  delta_aggregator.py  pyproject.toml
monitor/accumulation/: cgroups.py  docker.py  k8s.py
monitor/cli/: __init__.py
monitor/config/: __init__.py  runtime.py
monitor/database/: DBClient.py  client.py
monitor/deployment/: configmap.yaml  daemonset.yaml
monitor/deployment/prometheus/: prometheus.yml
monitor/exporter/: exporter.py
monitor/inference/: api.py
monitor/metrics/: delta.py
monitor/models/: gpu08.pkl
monitor/monitoring/: bpf_monitoring_client.py  hardware_profile.py  monitor_client.py  proc_monitoring_client.py  reporting.py  syscall_classes.py  tracer.c
monitor/prometheus/: prometheus.yml
monitor/scripts/: install-deps.sh  install_benchmarks.sh  py-env.sh  rapl-discovery.sh  read-powermeter.py
monitor/smart_meter_api_wrapper/: smart_meter.py
monitoring/: bpf_monitoring_client.py  monitor_client.py  nextflow_trace_resolver.py  proc_monitoring_client.py  tracer.c
scripts/: docker-compose.yml  docker-test.sh  export-powermeter-readings.py  export_process_dataset.sh  install-deps.sh  install-kepler.sh  k8s-test.sh  py-env.sh  run_daw_load_generation.sh  stress_ng_test_johannes.sh
smart_meter/: __init__.py  client.py
training/: clean_dataset-batched.py  clean_dataset-pid.py  clean_dataset.py  pid-split-prediction.py  requirements.txt  ridge-regression-prediction.py  ridge-regression-training.py  sgd-l2-training.py  test.py
(+138 files in other folders)
