[tool.poetry]
name = "process-energy-accounting"
version = "0.1.0"
description = ""
authors = [
    ""
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = ">=2.32.3,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
influxdb-client = "^1.49.0"
matplotlib = "^3.10.7"
cvxpy = "^1.7.3"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
pyarrow = "^22.0.0"
fastparquet = "^2024.11.0"
psutil = "^7.1.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
