[tool.poetry]
name = "paper-energy-accounting"
version = "0.1.0"
description = "Comprehensive energy accounting and modeling for paper experiments"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# Core data processing
pandas = ">=2.3.3,<3.0.0"
numpy = "^1.26.0"
scipy = "^1.11.0"

# Visualization
matplotlib = ">=3.10.7,<4.0.0"
seaborn = ">=0.13.2,<1.0.0"

# Optimization & ML
cvxpy = ">=1.7.3,<2.0.0"
scikit-learn = ">=1.7.2,<2.0.0"

# Data I/O & serialization
pyarrow = ">=22.0.0,<23.0.0"
fastparquet = ">=2024.11.0,<2025.0.0"

# HTTP & API
requests = ">=2.32.3,<3.0.0"
fastapi = ">=0.136.1"
uvicorn = ">=0.46.0"
pydantic = ">=2.13.3"

# Cloud & Container
docker = ">=7.1.0"
kubernetes = ">=35.0.0"

# Monitoring & Metrics
influxdb-client = ">=1.49.0,<2.0.0"
prometheus-client = ">=0.22.1,<1.0.0"
psutil = "^7.2.2"
cgroupspy = ">=0.2.3"

# Configuration & Utilities
python-dotenv = "^1.1.0"
tabulate = ">=0.10.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
